# Bgmi-esports-coach

./: .replit  Procfile  README.md  app.py  basic_server.py  dashboard_server.py  http_server.py  index.html  minimal_demo.py  ngrok_server.py  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  replit.nix  robust_server.py  serve_static.py  server.py  simple_app.py  simple_display.py  standalone_app.py  start.py  static_demo.html
