[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "mss>=10.0.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pydantic>=2.11.1",
    "pyngrok>=7.2.3",
    "tensorflow>=2.14.0",
    "uvicorn>=0.34.0",
]
